# MAE-OVD

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
configs/: README.md
configs/backbone/: default.py
configs/pretrain/: default.py  yolo_world_bitl_finetune.py  yolo_world_bitl_finetune_large.py  yolo_world_bitl_finetune_large_lvis.py  yolo_world_bitl_finetune_large_obj365.py
docs/: root.tex
mae_ovd/: __init__.py
mae_ovd/losses/: __init__.py  pretrain.py
mae_ovd/models/: __init__.py  yolo_world_det_head.py
mae_ovd/models/backbone/: __init__.py  lightweight_encoder.py  text_encoder.py  yolo_world_backbone.py
mae_ovd/models/bitl_pan/: __init__.py  bitl_pan.py  ir_ip.py  t_ssg.py
mae_ovd/models/imd/: __init__.py  fusion.py  grounding.py  ifsd.py  template_extractor.py
mae_ovd/models/mae/: __init__.py  mae_decoder.py
mae_ovd/utils/: __init__.py  onnx_utils.py  patch_mask_utils.py
tests/: test_bitl_pan.py  test_imd.py  test_onnx_export.py
