[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mae-ovd"
version = "0.1.0"
description = "MAE-Powered Open-Vocabulary Vision-Language Model for Anti-UAV Detection"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Changhong Fu", email = "changhongfu@tongji.edu.cn"},
    {name = "Zhangchi Guo"},
    {name = "Liangliang Yao"},
    {name = "Haobo Zuo"},
    {name = "Mengyuan Li"},
    {name = "Yipeng Feng"},
]
keywords = [
    "open-vocabulary-detection",
    "object-detection",
    "uav-detection",
    "masked-autoencoder",
    "vision-language",
    "zero-shot",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
]
requires-python = ">=3.8"

dependencies = [
    "torch>=2.1.0",
    "torchvision>=0.16.0",
    "transformers>=4.30.0",
    "tokenizers>=0.15.0",
    "numpy>=1.21.0",
    "opencv-python>=4.8.0",
    "supervision>=0.19.0",
    "openmim>=0.3.9",
    "mmcv-lite>=2.0.1",
    "mmdet>=3.3.0",
    "mmengine>=0.10.0",
    "mmcv>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "onnx>=1.14.0",
    "onnxruntime>=1.16.0",
    "onnxsim>=0.4.17",
]
all = [
    "pytest>=7.0.0",
    "onnx>=1.14.0",
    "onnxruntime>=1.16.0",
    "onnxsim>=0.4.17",
]

[project.urls]
Homepage = "https://github.com/vision4robotics/MAE-OVD"
Repository = "https://github.com/vision4robotics/MAE-OVD"
Documentation = "https://github.com/vision4robotics/MAE-OVD#readme"
"Bug Tracker" = "https://github.com/vision4robotics/MAE-OVD/issues"
"Paper" = "https://arxiv.org/"
"Conference" = "https://icarm2026.org/"

[tool.setuptools.packages.find]
where = ["."]
include = ["mae_ovd*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
